# bevy_audio_visualizer

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/shaders/: shader.wgsl
src/: main.rs
